# rust-rocket-json

./: Cargo.toml  README.md
src/: main.rs
src/controllers/: home_controller.rs  login_controller.rs  recursos_controller.rs
src/dtos/: login_dto.rs  mod.rs  recurso_dto.rs
src/middlewares/: auth_guard.rs
src/model_views/: home.rs  mod.rs
src/models/: administrador.rs  app_error.rs  erro_json.rs  mod.rs
src/servicos/: administrador_servico.rs  jwt_servico.rs  recurso_servico.rs
tests_curls/: delete_recurso.sh  get_por_id.sh  login.sh  post_recurso.sh  put_recurso.sh
