[package]
name = "rust-rocket-json"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
time = "=0.3.35"   # 🔒 Fixa a versão compatível
chrono = "0.4"
jsonwebtoken = "10.4.0"  # Adicione esta linha